--- a/projects/libpng/Dockerfile
+++ b/projects/libpng/Dockerfile
@@ -21,4 +21,5 @@ RUN apt-get update && \
 RUN git clone --depth 1 https://github.com/madler/zlib.git
 RUN git clone --depth 1 --branch v1.6.48 https://github.com/pnggroup/libpng.git
 RUN cp libpng/contrib/oss-fuzz/build.sh $SRC
+RUN sed -i 's/libpng_read_fuzzer_seed_corpus\.zip/libpng_read_fuzzer_seed_corpus.zip.disabled/g' $SRC/build.sh
 WORKDIR libpng
